syntax = "proto3";

package internalpb;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tochemey/goakt/v4/internal/internalpb;internalpb";

enum Strategy {
  STRATEGY_ONE_FOR_ONE = 0;
  STRATEGY_ONE_FOR_ALL = 1;
}

// Down message is sent by a child
// actor to its parent when it is panicking or returning an error
// while processing messages
message Down {
  // Specifies the actor id
  string actor_id = 1;
  // Specifies the error message
  string error_message = 2;
  // Specifies the directive
  oneof directive {
    StopDirective stop = 3;
    ResumeDirective resume = 4;
    RestartDirective restart = 5;
    EscalateDirective escalate = 6;
  }
  // Specifies the strategy
  Strategy strategy = 7;
  // Specifies the message that triggered the failure
  google.protobuf.Any message = 8;
  // Specifies when the error occurred
  google.protobuf.Timestamp timestamp = 9;
}

// StopDirective defines the supervisor stop directive
message StopDirective {}

// ResumeDirective defines the supervisor resume directive
// This ignores the failure and processes the next message, instead
message ResumeDirective {}

// EscalateDirective defines the supervisor escalation directive
// It escalates the failure to the next parent in the hierarchy, thereby failing itself
message EscalateDirective {}

// RestartDirective defines supervisor restart directive
message RestartDirective {
  // Specifies the maximum number of retries;
  // When reaching this number, the faulty actor is stopped
  uint32 max_retries = 1;
  // Specifies the time range to restart the faulty actor
  int64 timeout = 2;
}
